<resources>
    <string name="app_name">GeoMessenger</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>

    <string name="mobile_number">Mobile Number:</string>
    <string name="sample_number">6502898293</string>
    <string name="geolocation">Geolocation:</string>
    <string name="sample_geolocation">38.897872, -77.036530</string>
    <string name="send_text_message">Send Text Message</string>

</resources>
