<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:orientation="horizontal" android:layout_width="fill_parent"
        android:layout_height="wrap_content">
        <TextView android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:text="@string/mobile_number" />
        <EditText android:id="@+id/addrEditText"
            android:layout_width="fill_parent" android:layout_height="wrap_content"
            android:phoneNumber="true" android:text="@string/sample_number"
            android:inputType="phone" />
    </LinearLayout>

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:orientation="vertical" android:layout_width="fill_parent"
        android:layout_height="wrap_content">
        <TextView android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:text="@string/geolocation" />
        <EditText android:id="@+id/msgEditText" android:layout_width="fill_parent"
            android:layout_height="wrap_content" android:text="@string/sample_geolocation"
            android:inputType="text" />
    </LinearLayout>

    <Button android:id="@+id/sendSmsBtn" android:layout_width="wrap_content"
        android:layout_height="wrap_content" android:text="@string/send_text_message"
        android:layout_gravity="center"
        android:layout_marginTop="20dp" />
</LinearLayout>
